samples/_failures_safe/1761214110_dea1b5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3994472c.c: In function ‘main’:
./samples/SAFE/__tmp_3994472c.c:166:5: error: expected expression at end of input
  166 |     if (len ==
      |     ^~
./samples/SAFE/__tmp_3994472c.c:166:5: error: expected declaration or statement at end of input
